fixed over spill on modals when rendering error messages, fixed overspill on product page when windo is made extremely small

--- a/react-app/src/components/ProductPage/ProductPage.css
+++ b/react-app/src/components/ProductPage/ProductPage.css
@@ -2,8 +2,8 @@
     margin-top: 60px;
     padding: 10%;
     display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 60% 15% 25%;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto auto;
     grid-template-areas:
     "image routine"
     "name name"
@@ -20,11 +20,12 @@
     grid-area: routine;
 }
 
-.product-page-container h1 h2{
+.product-page-container prod {
     grid-area: name;
+    display: flex;
 }
 
-.product-page-container p {
+.product-page-container .ing {
     grid-area: ingredients;
 }
 
